--- a/style.css
+++ b/style.css
@@ -1,1 +1,6 @@
-/* Add styles here */
+h1{
+    text-align: center;
+    text-decoration: dotted;
+    text-decoration: underline;
+    font-family: 'Times New Roman', Times, serif;
+}
