--- a/style.css
+++ b/style.css
@@ -4,3 +4,9 @@ h1{
     text-decoration: underline;
     font-family: 'Times New Roman', Times, serif;
 }
+#ordenada{
+    color: rgb(0, 0, 0);
+    background-color: rgb(128, 231, 223);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-style: italic;
+}
